Fixed typo in README

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Contributors: terenced
 Requires: .NET 4.0, Mono 2.10
 
-SharpDuster is a TV show file renumber.
+SharpDuster is a TV show file renamer.
 
 == Description ==
 SharpDuster is a simple command-line tool for rename and organizing TV show files.
